--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.10.4"
-          
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -60,7 +60,9 @@ jobs:
 
         # Build App and Run Application Test
       - name: Build Application and Run unit Test
-        run: poetry run python run.py & pytest
+        run: |
+          poetry shell
+          python run.py & pytest
 
   continuous-deployment:
     runs-on: ubuntu-latest
