Removed unit test

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -60,9 +60,8 @@ jobs:
 
         # Build App and Run Application Test
       - name: Build Application and Run unit Test
-        run: |
-          poetry shell
-          python run.py & pytest
+        # python run.py & pytest
+        run: poetry shell
 
   continuous-deployment:
     runs-on: ubuntu-latest
