--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -83,7 +83,7 @@ jobs:
         # Assuming the Deployment Group is already setup
         run: |
           aws deploy create-deployment \
-            --application-name MyDeployOnCodedeploy \
+            --application-name MySite \
             --deployment-group-name MySite \
             --deployment-config-name CodeDeployDefault.OneAtATime \
             --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
