--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ files:
    destination: /home/ec2-user/app
 hooks:
   AfterInstall:
-   - location: scripts/poetry_install
+   - location: scripts/install_dependencies.sh
      timeout: 300
      runas: root
   ApplicationStart:
-   - location: scripts/start_server
+   - location: scripts/start_server.sh
      timeout: 300
      runas: root
