--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,10 +19,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python 3.6
         uses: actions/setup-python@v2
         with:
-          python-version: "3.10.4"
+          python-version: 3.6
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
