--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
  - source: .
-   destination: /home/ec2-user/app
+   destination: /home/ninja/app
 hooks:
   AfterInstall:
    - location: scripts/install_dependencies.sh
